avoid "jumping" `ul` elements, fixes #278

--- a/blocks/TestBlock/css/test_block.less
+++ b/blocks/TestBlock/css/test_block.less
@@ -38,6 +38,7 @@ section.TestBlock {
     &.matching_exercise {
       padding-bottom: 10px;
       display: table-cell;
+      vertical-align: top;
 
       li {
         border-width: 1px;
